--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -58,7 +58,8 @@
         <!--Offers history-->
         <scene sceneID="DhO-TV-hgp">
             <objects>
-                <viewController id="biy-YM-IGo" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i3c-6F-wPq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="biy-YM-IGo" customClass="OffersHistoryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Rzt-gv-clV"/>
                         <viewControllerLayoutGuide type="bottom" id="yn6-UQ-N7T"/>
@@ -73,19 +74,26 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="3fp-Ry-bYi">
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="biy-YM-IGo" id="uPR-7w-XNN"/>
+                                    <outlet property="delegate" destination="biy-YM-IGo" id="pCf-g6-IG9"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Offers history" id="fjd-h7-B1c"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="i3c-6F-wPq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1176" y="-559"/>
+            <point key="canvasLocation" x="1988" y="-545"/>
         </scene>
         <!--Active offers-->
         <scene sceneID="c3p-ON-qn4">
             <objects>
-                <viewController id="7QG-Nx-ler" sceneMemberID="viewController">
+                <viewController id="7QG-Nx-ler" customClass="ActiveOffersViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tqi-qd-BMu"/>
                         <viewControllerLayoutGuide type="bottom" id="vd7-Jh-tXW"/>
@@ -100,6 +108,14 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="PaO-Be-22d">
+                                <rect key="frame" x="0.0" y="64" width="612" height="487"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="7QG-Nx-ler" id="7iT-rE-Ew8"/>
+                                    <outlet property="delegate" destination="7QG-Nx-ler" id="nry-D4-zvM"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -107,7 +123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JqM-31-XTq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-178" y="-559"/>
+            <point key="canvasLocation" x="634" y="-545"/>
         </scene>
         <!--Offers View Controller-->
         <scene sceneID="ILP-j7-DgH">
@@ -126,7 +142,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TeJ-7j-yM8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="496" y="-559"/>
+            <point key="canvasLocation" x="1316" y="-545"/>
         </scene>
         <!--Add Contact Info View Controller-->
         <scene sceneID="HzI-kK-jUP">
@@ -205,17 +221,7 @@
                             <constraint firstItem="Il2-8j-NAR" firstAttribute="top" secondItem="FcH-6O-0Zv" secondAttribute="bottom" constant="19" id="rks-D3-y4i"/>
                         </constraints>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem style="plain" id="ZJr-p7-yqU">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nva-uD-tLe">
-                                <rect key="frame" x="-23" y="-15" width="133" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                        </barButtonItem>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="emailTextField" destination="gwc-mi-MrI" id="YgR-t3-ny4"/>
@@ -261,9 +267,6 @@
                                 <state key="normal" title="Your Bids">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <connections>
-                                    <segue destination="Xgh-LI-jLK" kind="show" id="bgv-Oq-Hso"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cAe-N9-tr0">
                                 <rect key="frame" x="29" y="375" width="49" height="30"/>
@@ -346,32 +349,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s8H-fu-NJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1308" y="156"/>
-        </scene>
-        <!--Bids Table View Controller-->
-        <scene sceneID="vh2-pH-fmX">
-            <objects>
-                <tableViewController id="Xgh-LI-jLK" customClass="BidsTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="0wF-3B-1wi">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="8FI-uY-DhJ">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8FI-uY-DhJ" id="JxR-26-KCH">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="Xgh-LI-jLK" id="ZpB-tG-V8r"/>
-                            <outlet property="delegate" destination="Xgh-LI-jLK" id="ASm-kl-xdS"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tsE-r1-yIf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="496" y="891"/>
         </scene>
         <!--Offer Details View Controller-->
         <scene sceneID="LDb-rq-faM">
@@ -622,7 +599,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aLx-fq-ygR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1182" y="921"/>
+            <point key="canvasLocation" x="2658" y="846"/>
         </scene>
         <!--Home Table View Controller-->
         <scene sceneID="5Qq-ku-0fM">
