--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -103,6 +103,32 @@
             </objects>
             <point key="canvasLocation" x="1988" y="-545"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="ESE-Gf-N9E">
+            <objects>
+                <tableViewController id="HW3-U9-p9y" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Cst-wz-Vyg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="PGf-ju-kK3">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PGf-ju-kK3" id="NlJ-5r-6Ht">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="HW3-U9-p9y" id="Gfz-4K-3cA"/>
+                            <outlet property="delegate" destination="HW3-U9-p9y" id="R7P-vb-1FE"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZF7-Zj-wdU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-62" y="-545"/>
+        </scene>
         <!--Active offers-->
         <scene sceneID="c3p-ON-qn4">
             <objects>
@@ -133,6 +159,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Active offers" id="YOE-ue-qam"/>
+                    <connections>
+                        <outlet property="tableView" destination="PaO-Be-22d" id="eUK-kB-czU"/>
+                        <segue destination="HW3-U9-p9y" kind="show" identifier="OfferBidsSegue" id="GeQ-ZQ-Trt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JqM-31-XTq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -243,7 +273,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FPX-Ct-2ew" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="618" y="156"/>
+            <point key="canvasLocation" x="614" y="142"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="WUc-bo-EY2">
