--- a/Pets/Pets/HomeUITableViewCell.xib
+++ b/Pets/Pets/HomeUITableViewCell.xib
@@ -7,14 +7,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="5GC-fV-KwG" customClass="HomeUITableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HomeUITableViewCell" rowHeight="100" id="5GC-fV-KwG" customClass="HomeUITableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5GC-fV-KwG" id="DCP-jD-rqD">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Wl-IS-tBY">
-                        <rect key="frame" x="185" y="68" width="135" height="30"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Wl-IS-tBY">
+                        <rect key="frame" x="185" y="69" width="135" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="135" id="3yE-mz-TCd"/>
                         </constraints>
@@ -22,7 +22,7 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xes-q2-iuv">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xes-q2-iuv">
                         <rect key="frame" x="130" y="-8" width="176" height="47"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="47" id="4Eg-Vd-29c"/>
@@ -32,16 +32,20 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TAc-Pm-NGb">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TAc-Pm-NGb">
                         <rect key="frame" x="0.0" y="0.0" width="122" height="99"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="122" id="ZYZ-mJ-onR"/>
+                        </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="9Wl-IS-tBY" secondAttribute="bottom" constant="-10" id="df3-7L-rVo"/>
-                    <constraint firstAttribute="trailing" secondItem="9Wl-IS-tBY" secondAttribute="trailing" id="fIO-SN-rix"/>
-                    <constraint firstItem="xes-q2-iuv" firstAttribute="top" secondItem="DCP-jD-rqD" secondAttribute="topMargin" constant="-16" id="jDK-NN-Hqw"/>
+                    <constraint firstItem="TAc-Pm-NGb" firstAttribute="leading" secondItem="DCP-jD-rqD" secondAttribute="leading" id="Ih4-xI-YHb"/>
+                    <constraint firstItem="TAc-Pm-NGb" firstAttribute="bottom" secondItem="9Wl-IS-tBY" secondAttribute="bottom" id="JTH-mv-RwI"/>
+                    <constraint firstItem="TAc-Pm-NGb" firstAttribute="top" secondItem="DCP-jD-rqD" secondAttribute="top" id="Khq-oL-nQc"/>
+                    <constraint firstItem="xes-q2-iuv" firstAttribute="leading" secondItem="TAc-Pm-NGb" secondAttribute="trailing" constant="8" symbolic="YES" id="cAW-eh-ebm"/>
                     <constraint firstItem="9Wl-IS-tBY" firstAttribute="top" secondItem="xes-q2-iuv" secondAttribute="bottom" constant="7" id="p5a-Ik-26w"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="xes-q2-iuv" secondAttribute="trailing" constant="6" id="pCD-5e-FRX"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="TAc-Pm-NGb" secondAttribute="bottom" constant="-11" id="rM0-b6-uMr"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
