--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -68,7 +68,7 @@
             </objects>
             <point key="canvasLocation" x="-62" y="158"/>
         </scene>
-        <!--Offers history-->
+        <!--Inactive offers-->
         <scene sceneID="DhO-TV-hgp">
             <objects>
                 <viewController id="biy-YM-IGo" customClass="OffersHistoryViewController" sceneMemberID="viewController">
@@ -87,7 +87,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="3fp-Ry-bYi">
-                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <rect key="frame" x="-50" y="64" width="600" height="487"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="biy-YM-IGo" id="uPR-7w-XNN"/>
@@ -97,16 +97,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Offers history" id="fjd-h7-B1c"/>
+                    <tabBarItem key="tabBarItem" tag="1" title="Inactive offers" id="fjd-h7-B1c"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i3c-6F-wPq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1988" y="-545"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Offer Bids Table View Controller-->
         <scene sceneID="ESE-Gf-N9E">
             <objects>
-                <tableViewController id="HW3-U9-p9y" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="OfferBidsController" id="HW3-U9-p9y" customClass="OfferBidsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Cst-wz-Vyg">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -132,7 +132,7 @@
         <!--Active offers-->
         <scene sceneID="c3p-ON-qn4">
             <objects>
-                <viewController id="7QG-Nx-ler" customClass="ActiveOffersViewController" sceneMemberID="viewController">
+                <viewController id="7QG-Nx-ler" customClass="OffersHistoryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tqi-qd-BMu"/>
                         <viewControllerLayoutGuide type="bottom" id="vd7-Jh-tXW"/>
@@ -168,10 +168,10 @@
             </objects>
             <point key="canvasLocation" x="634" y="-545"/>
         </scene>
-        <!--Offers View Controller-->
+        <!--Tab Bar Controller-->
         <scene sceneID="ILP-j7-DgH">
             <objects>
-                <tabBarController id="mCX-qv-H1f" customClass="OffersViewController" sceneMemberID="viewController">
+                <tabBarController id="mCX-qv-H1f" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="xfZ-O0-Xv7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
