--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -87,7 +87,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="3fp-Ry-bYi">
-                                <rect key="frame" x="-50" y="64" width="600" height="487"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="biy-YM-IGo" id="uPR-7w-XNN"/>
@@ -98,6 +98,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" tag="1" title="Inactive offers" id="fjd-h7-B1c"/>
+                    <connections>
+                        <outlet property="tableViewInactiveOffers" destination="3fp-Ry-bYi" id="LBa-hf-n2V"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i3c-6F-wPq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -111,14 +114,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="PGf-ju-kK3">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PGf-ju-kK3" id="NlJ-5r-6Ht">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="HW3-U9-p9y" id="Gfz-4K-3cA"/>
                             <outlet property="delegate" destination="HW3-U9-p9y" id="R7P-vb-1FE"/>
@@ -160,7 +155,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Active offers" id="YOE-ue-qam"/>
                     <connections>
-                        <outlet property="tableView" destination="PaO-Be-22d" id="eUK-kB-czU"/>
+                        <outlet property="tableViewActiveOffers" destination="PaO-Be-22d" id="jeV-cg-PpP"/>
                         <segue destination="HW3-U9-p9y" kind="show" identifier="OfferBidsSegue" id="GeQ-ZQ-Trt"/>
                     </connections>
                 </viewController>
