--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -99,7 +99,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" tag="1" title="Inactive offers" id="fjd-h7-B1c"/>
                     <connections>
-                        <outlet property="tableViewInactiveOffers" destination="3fp-Ry-bYi" id="LBa-hf-n2V"/>
+                        <outlet property="tableViewInactiveOffers" destination="3fp-Ry-bYi" id="9LM-Ca-uAZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i3c-6F-wPq" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -155,7 +155,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Active offers" id="YOE-ue-qam"/>
                     <connections>
-                        <outlet property="tableViewActiveOffers" destination="PaO-Be-22d" id="jeV-cg-PpP"/>
+                        <outlet property="tableViewActiveOffers" destination="PaO-Be-22d" id="OUc-rX-sUI"/>
                         <segue destination="HW3-U9-p9y" kind="show" identifier="OfferBidsSegue" id="GeQ-ZQ-Trt"/>
                     </connections>
                 </viewController>
